base/kubernetes/jellyfin/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: jellyfin
  annotations:
    argocd.argoproj.io/hook: PostSync
    argocd.argoproj.io/sync-wave: "1"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.dawidde.de`)
    kind: Rule
    services:
    - name: jellyfin
      port: 8096
  tls:
    secretName: jellyfin-certificate-secret
